# sapl-python-demos

./: .gitignore  README.md  test_all_demos.sh  test_demo.sh
djangoDemo/: Dockerfile  docker-compose.yml  manage.py  patient_manager.sapl  patient_queryset.sapl  pyproject.toml  templates.sapl  views.sapl
djangoDemo/demo_settings/: asgi.py  settings.py  urls.py  wsgi.py
djangoDemo/medical/: apps.py  consumers.py  demo_data.py  forms.py  model_manager.py  models.py  routing.py  urls.py  views.py
djangoDemo/medical/constraint_handler_provider/: __init__.py  error_constraint_handler_provider.py  function_arguments_constraint_handler_provider.py  result_constraint_handler_provider.py
djangoDemo/medical/consumer/: blood_pressure_consumer.py  pulse_consumer.py  vital_status_consumer.py
djangoDemo/medical/migrations/: 0001_initial.py
djangoDemo/policies/: consumer.sapl  patient_manager.sapl  patient_queryset.sapl  views.sapl
djangoDemo/skripte/: start_demo.bat  start_demo_bash.sh
django_demo/: .env  README.md  docker-compose.yml  manage.py  pyproject.toml
django_demo/demo_project/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
django_demo/keycloak/: realm-export.json
django_demo/medical/: apps.py  auth.py  models.py  urls.py  views.py  views_services.py
django_demo/medical/handlers/: __init__.py  audit_trail.py  cap_transfer.py  classification_filter.py  enrich_error.py  inject_timestamp.py  log_access.py  log_stream_event.py  notify_on_error.py  redact_fields.py
django_demo/medical/services/: patient_service.py
django_demo/policies/: permit-service-patient-detail.sapl  permit-service-search-patients.sapl  permit-transfer.sapl
fastapi_demo/: .env  README.md  pyproject.toml
fastapi_demo/app/: auth.py  main.py  models.py
fastapi_demo/app/handlers/: audit_trail.py  cap_transfer.py  classification_filter.py  enrich_error.py  inject_timestamp.py  log_access.py  notify_on_error.py  redact_fields.py
fastapi_demo/app/routers/: basic.py  constraints.py  services.py  streaming.py
fastapi_demo/keycloak/: realm-export.json
fastmcp_demo/: .env  README.md  auth_server.py  client.py  demo-report.md  demo.py  docker-compose.yml  handlers.py  middleware_server.py  pyproject.toml
fastmcp_demo/keycloak/: mcp-realm.json
fastmcp_demo/policies/: analytics.sapl
flask_demo/: .env  README.md  app.py  auth.py  config.json  database_manager.py  demo_data.py  handlers.py  pyproject.toml  singledb.py
flask_demo/constrainthandling/: __init__.py  constrainthandler.py
flask_demo/database_manager/: user_manager.py
flask_demo/models/: __init__.py  bank_account.py  bank_transaction.py  credit_request.py  user.py
flask_demo/policies/: permit-service-patient-summary.sapl
flask_demo/routes/: basic.py  constraints.py  services.py  streaming.py
flask_demo/sapl_policies/: policies.sapl
flask_demo/services/: patient_service.py
flask_demo/templates/: account_overview.html  approve_credit_changes.html  bankaccount.html  login.html  register.html  request_credit.html  transaction.html
flask_demo/views/: __init__.py  actions.py  login.py  overviews.py
simple_flask_demo/: Dockerfile  README.md  app.py  config.json  docker-compose.yml  error_handler.py  pyproject.toml  subject_functions.py  views.py
simple_flask_demo/constraint_handler/: __init__.py  constraint_handler.py
simple_flask_demo/sapl_policies/: policies.sapl
simple_flask_demo/skripte/: Requests as John.postman_collection.json  Requests as Julia.postman_collection.json  start_demo._bash.sh  start_demo.bat
tornado_demo/: README.md  app.py  auth.py  handlers.py  models.py  pyproject.toml
tornado_demo/keycloak/: realm-export.json
tornado_demo/policies/: permit-service-find-patient.sapl  permit-service-list-patients.sapl
tornado_demo/routes/: basic.py  constraints.py  services.py  streaming.py
tornado_demo/services/: patient_service.py
(+17 files in other folders)
