[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SAPL-django-demo"
version = "0.1.0"
description = "initial version of the demo"
dependencies = [
    'daphne',
    'channels',
    'django',
    'sapl_django'
]

[tools.setuptools]
packages = ["django_settings", "medical"]

[tool.sapl.ini_options]
framework = 'django'
