[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SAPL-flask-demo"
version = "0.1.0"
description = "initial version of the demo"
dependencies = [
    'flask',
    'sapl_flask',
    'flask_login',
    'werkzeug',
    'flask_sqlalchemy'
]

[tool.setuptools]
packages = [
    'sapl_policies',
    'models',
    'views'
]