[project]
name = "sapl-flask-demo"
version = "1.0.0"
description = "Flask demo application for SAPL Python PEP"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "sapl-flask>=4.0.0",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
