[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SAPL-simple-flask-demo"
version = "0.1.0"
description = "initial version of the demo"
dependencies = [
    'flask',
    'sapl_flask',
    'pyJWT'
]

[tool.setuptools]
packages = [
    'constraint_handler',
    'sapl_policies'
]